# TTReg

./: CMakeLists.txt  README.md  TTReg.kdev4
.kdev4/: TTReg.kdev4
capture/: CMakeLists.txt  instructions of turntable.txt
capture/Resources/: main_window.ui
capture/include/: main_window.h  turn_table.h
capture/src/: image_grabber.cpp  main_window.cpp  turn_table.cpp
cmake/: Find3rdParty.cmake
compute/: CMakeLists.txt  Interactive Registration Process.txt  README.md
compute/mvr/: CMakeLists.txt
compute/mvr/include/: color_map.h  file_system_model.h  main_window.h  parameter_manager.h  point_cloud.h  registrator.h  sphere_ball.h  task_dispatcher.h  types.h
compute/mvr/resource/: main_window.ui
compute/mvr/src/: color_map.cpp  file_system_model.cpp  file_viewer_widget.cpp  main_window.cpp  osg_viewer_widget.cpp  parameter_manager.cpp  point_cloud.cpp  registrator.cpp  renderable.cpp  sphere_ball.cpp  task_dispatcher.cpp  toggle_handler.cpp
convert/: CMakeLists.txt  README.md
convert/cmake/: Find3rdParty.cmake
convert/src/: main.cpp
mvr/: CMakeLists.txt
mvr/include/: adapter_widget.h  point_cloud.h  registrator.h  types.h
mvr/include/impl/: parameter.hpp
mvr/src/: main_window.cpp  osg_viewer_widget.cpp  point_cloud.cpp  registrator.cpp
